--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
 /* import common */
 @import url(./common.css);
 
+
+/* electric car start */
 section.wrap-ec {
   /* border: 2px solid black; */
   margin-top: 20px;
@@ -17,11 +19,12 @@ section.wrap-ec .ec-mainheader {
 }
 
 section.wrap-ec .ec-mainsubtext {
-  font-size: 16px;
+  font-size: 20px;
   text-align: center;
-  margin-top: 30px 0 0;
+  margin-top: 50px;
   color: #666;
   line-height: 34px;
+  letter-spacing: -2px;
 }
 
 section.wrap-ec .ec-body {
@@ -63,38 +66,169 @@ section.wrap-ec .ec-body .electric-car .ec-info {
 
 section.wrap-ec .ec-body .electric-car .ec-info .ec-inner .ec-badge {
   background: #007fa8;
-  font-size: 12px;
+  font-size: 15px;
   color: #fff;
-  padding: 3px;
+  padding: 5px;
   border: 1px solid #007fa8;
   display: inline-block;
-  font-weight: 600;
+  font-weight: 700;
   letter-spacing: 0.02em;
   line-height: 1;
 }
 
 section.wrap-ec .ec-body .electric-car .ec-info .ec-inner .ec-carname {
-  font-size: 30px;
+  font-size: 38px;
   font-weight: 600;
   line-height: 44px;
   letter-spacing: -.4px;
-  margin: 8px 0 9px;
+  margin: 20px 0 30px;
 }
 
 section.wrap-ec .ec-body .electric-car .ec-info .ec-inner .ec-subtext {
-  font-size: 16px;
+  font-size: 28px;
   line-height: 30px;
-  letter-spacing: -.4px;
+  letter-spacing: -2px;
   font-weight: 500;
+  font-weight: bold;
 }
 
 section.wrap-ec .ec-body .electric-car .ec-info .ec-inner .ec-more {
-  margin-top: 36px;
-  width: 120px;
+  margin-top: 65px;
+  width: auto;
+  font-size: 14px;
   background: #022c5f;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   vertical-align: middle;
-
+  text-align: center;
+  padding: 15px 26px;
+  font-weight: 600;
+  letter-spacing: -1px;
 }
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network {
+  margin-bottom: 35px;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .ec-network-header {
+  margin-top: 60px;
+  font-size: 22px;
+  font-weight: bold;
+  color: #000;
+  letter-spacing: -.24px;
+  line-height: 34px;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .network-subtext {
+  color: #666;
+  font-size: 19px;
+  text-align: justify;
+  line-height: 45px;
+  letter-spacing: -2px;
+  margin: 20px 0;
+  font-weight: bold;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .ec-link {
+  position: relative;
+  z-index: 1;
+  padding-top: 15px;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .ec-link a {
+  color: #002c5f;
+  font-weight: 900;
+  font-size: 18px;
+  letter-spacing: -2px;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+section.wrap-ec .ec-body .electric-car .ec-info .ec-network .ec-link a:last-child {
+  padding-left: 30px;
+}
+
+/* end electric car */
+
+
+/* trendy hyundai start */
+
+section.wrap-trendy {
+  padding-top: 140px;
+  text-align: center;
+}
+
+section.wrap-trendy h2.title {
+  font-size: 44px;
+  font-weight: bold;
+  line-height: 58px;
+  
+}
+
+section.wrap-trendy p.title-subtext {
+  margin: 30px 0 0;
+  font-size: 16px;
+  color: #666;
+  line-height: 34px;
+}
+
+section.wrap-trendy .section-body {
+  width: 80%;
+  margin: 60px auto 0;
+  padding: 0 30px;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai {
+  display: flex;
+  justify-content: space-between;
+  border: 2px dashed red;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info {
+  width: 100%;
+  padding: 52px 60px 0;
+  background: #f6f3f2;
+  text-align: left;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info h3.title {
+  font-size: 38px;
+  font-weight: bold;
+  line-height: 44px;
+}
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info h3.title span {
+  font-weight: 400;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info p.txt {
+  margin: 13px 0 0;
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 555;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-info a {
+  width: 120px;
+  height: 40px;
+  margin: 50px 0 0;
+  font-size: 13px;
+  background: #002c5f;
+  font-weight: 555;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  text-decoration: none;
+  padding: 15px 26px;
+  letter-spacing: -1px;
+  box-sizing: border-box;
+}
+
+section.wrap-trendy .section-body .trendy-hyundai .trendy-hyundai-img img{
+  vertical-align: top;
+}
+
+/* end trendy hyundai */
