--- a/css/common.css
+++ b/css/common.css
@@ -3,11 +3,20 @@
 
 * {
   box-sizing: border-box;
+  
+
+}
+
+button {
+  background: none;
+  border: none ;
+  cursor: pointer;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .clearfix::after {
