--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,241 @@
 @import url(./common.css);
 
 
+
+/* 헤 더 */
+/* 맨 위 메 뉴 시작 */
+
+div.main_header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  border: 1px dashed gray;
+  width: 100%;
+  padding: 10px 0;
+  height: 100px;
+}
+
+div.main_header .inner_wrap {
+  width: 80%;
+  border: 1px dashed blue;
+  margin: 20px auto;
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+
+}
+
+div.main_header .inner_wrap .img-log {
+  width: 10%;
+
+}
+
+div.main_header .inner_wrap .img-log img {
+  width: 100%;
+  height: 30px;
+}
+
+div.main_header .inner_wrap ul {
+  width: 50%;
+  border: 1px dashed black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+}
+
+div.main_header .inner_wrap ul li button {
+  font-size: 15px;
+  font-weight: bold;
+  margin-left: 5px;
+  height: 100%;
+}
+
+div.main_header .inner_wrap div {
+  border: 1px dashed purple;
+  width: 30%;
+}
+div.main_header .inner_wrap .img-log {
+  background: url(../img/hyu_logo_og_image.jpg) no-repeat center/cover;
+
+}
+
+
+div.main_header .inner_wrap div a {
+  font-size: 15px;
+  height: 100%;
+}
+
+div.main_header .inner_wrap div button {
+  width: 13%;
+  border: 1px dashed red;
+  height: 100%;
+}
+
+div.main_header .inner_wrap div .btn-1 {
+  margin-right: 20px;
+}
+
+/* 맨 위 메 뉴 끝*/
+
+
+
+/* 첫 번 째 메 인 사 진 부 분 */
+header.top_main {
+  background: url(../img/brand_kv_ioniq6_w.jpg) no-repeat center/cover;
+  border: 1px dashed blue;
+  width: 100%;
+  height: 950px;
+  position: relative;
+  
+}
+
+header .txt-wrap {
+  width: 100%;
+  border: 1px dashed green;
+  position: absolute;
+  top: 10%;
+  height: 90%;
+}
+header .txt-wrap a{
+  display: block;
+  border: 1px dashed red;
+  color: #fff;
+}
+header .txt-wrap .text-1 {
+  font-size: 60px;
+  font-weight: 700;
+  position: absolute;
+  top: 30px; left: 300px;
+}
+
+header .txt-wrap .text-2 {
+  font-size: 20px;
+  font-weight: 600;
+  
+  position: absolute;
+  top: 120px; left: 300px;
+}
+
+header .txt-wrap .btn-less {
+  border: 1px dashed red;
+  width: 50px; height: 150px;
+  position: absolute;
+  top: 250px; left: 100px;
+  color: #fff;
+  font-size: 50px;
+}
+
+header .txt-wrap .btn-than {
+  border: 1px dashed red;
+  width: 50px; height: 150px;
+  position: absolute;
+  top: 250px; right: 100px;
+  color: #fff;
+  font-size: 50px;
+}
+
+header .txt-wrap div .text-3 {
+  position: absolute;
+  top: 315px; left: 150px;
+}
+header .txt-wrap div .text-4 {
+  position: absolute;
+  top: 315px; right: 150px;
+}
+header .txt-wrap .main-content {
+  margin: 10% auto;
+  height: 50%;
+  width: 70%;
+}
+
+
+header .txt-wrap .btn-2 {
+  border: 1px dashed darkcyan ;  
+  color: gray;
+  opacity: 0.8;
+  position: absolute;
+  top: 75%; left: 45%;
+}
+
+header .txt-wrap .btn-2:nth-child(2) {
+  margin-left: 25px;
+}
+header .txt-wrap .btn-2:nth-child(3) {
+  margin-left: 50px;
+}
+header .txt-wrap .btn-2:nth-child(4) {
+  margin-left: 75px;
+}
+header .txt-wrap .btn-2:nth-child(5) {
+  margin-left: 100px;
+}
+header .txt-wrap .btn-2:nth-child(6) {
+  margin-left: 125px;
+  color: aqua;
+}
+header .txt-wrap .btn-2:nth-child(7) {
+  margin-left: 150px;
+}
+
+header .txt-wrap .quick-menu {
+  position: absolute;
+  bottom: 0;
+  border: 1px dashed blue;
+  width: 100%; height: 20%;
+  background-color: lightgray;
+  opacity: 0.4;
+}
+
+header .txt-wrap .quick-menu1 {
+  margin: 0 auto;
+  width: 49%;
+  border: 1px dashed red;
+}
+header .txt-wrap .quick-menu1 button {
+  width: 100px;
+  border: 1px dashed blue;
+  margin: 0 5px;
+  
+}
+header .txt-wrap .quick-menu1 button img {
+  width: 100%;
+}
+header .txt-wrap .quick-menu2 {
+  border: 1px dashed red;
+  margin: 0 auto;
+  width: 5%;
+}
+header .txt-wrap .quick-menu2 button {
+  border-bottom: 3px solid;
+  width: 46%;
+}
+header .txt-wrap .quick-menu2 button:last-child {
+  border-bottom: 3px solid rgb(121, 118, 118);
+}
+
+/* 헤 더 끝 */
+
+
+
+
+/* 세 션 1 */
+
+
+.section-2 {
+  width: 100%; height: 800px;
+  border: 1px dashed black;
+}
+
+.section-2 div.content_2 {
+  margin: 0 auto;
+  width: 80%; height: 100%;
+  border: 1px dashed red;
+}
+
+
+
+
+
+
+
