--- a/css/main.css
+++ b/css/main.css
@@ -132,47 +132,54 @@ section.notice .inner ul li {
 section.notice .inner ul li .img-box {
   object-fit: cover;
   margin: 0.5%;
-}
-
-section.notice .inner ul li .img-box img {
-  border: 5px solid black;
-  height: 250px;
-  width: 100%;
   position: relative;
 }
 
-section.notice .inner ul li .img-box::after {
+section.notice .inner ul li .img-box img {
+  height: 250px;
+  width: 100%;
+}
+
+section.notice .inner ul li .img-box::before {
   content: '';
   width: 0;
   height: 100%;
-  background-color: rgba(19, 19, 167, 0.5);
+  background-color: rgba(0, 10, 97, 0.7);
   position: absolute;
   top: 0;
   left: 0;
 }
 
-section.notice .inner ul li a:hover .img-box::after {
+section.notice .inner ul li a:hover .img-box::before {
   width: 100%;
 }
 
-section.notice .inner ul li .img-box::before {
-  content: 'N 컬렉션 | N Vision 74 RC카 출시 | 현대자동차';
+section.notice .inner ul li h3 {
   position: absolute;
   color: white;
   top: 50%;
   left: 50%;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 14px;
   transform: translate(-50%, -50%);
-  border-radius: 30px;
-  padding: 10px 30px;
+  border-radius: 0px;
   opacity: 0;
 }
 
-section.notice .inner ul li a:hover .img-box::before {
+section.notice .inner ul li span {
+  position: absolute;
+  right: 10%;
+  bottom: 10%;
+  opacity: 0;
+}
+
+section.notice .inner ul li a:hover h3 {
   opacity: 1;
 }
 
+section.notice .inner ul li a:hover span {
+  opacity: 1;
+}
 
 section.notice .inner ul li p {
   position: absolute;
@@ -182,11 +189,13 @@ section.notice .inner ul li p {
   font-weight: bold;
   font-size: 13px;
   border-radius: 50px;
-  padding: 10px 15px;
+  padding: 10px 20px;
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-
+section.notice .inner ul li a:hover p {
+  border: 2px solid white;
+}
 
 /* section .information */
 section.information {
@@ -199,16 +208,23 @@ section.information {
 
 section.information .inner {
   border: 2px solid #f0e1dd;
-  margin: 0 400px -50px;
-  padding: 30px 50px 80px 50px;
+  margin: 0 380px -50px;
+  padding: 30px 30px 80px 50px;
   background-color: white;
   border-radius: 30px;
   font-size: 14px;
 }
 
 section.information .inner h2 {
-  font-size: 16px;
+  font-size: 15px;
   margin: 10px auto;
+}
+
+section.information .inner h3 {
+  font-size: 15px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  color: darkblue;
 }
 
 section.information .inner ul {
@@ -216,50 +232,75 @@ section.information .inner ul {
   justify-content: space-around;
 }
 
-section.information .inner ul li h2 {
-  color: navy;
+section.information .inner ul li {
+  width: 30%;
 }
 
 section.information .inner ul li ul {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  justify-content: start;
 }
 
 section.information .inner ul li ul li {
-  line-height: 2.5;
+  width: 50%;
+  font-size: 12px;
+  line-height: 2;
 }
 
 
 /* footer */
 
 footer {
-  background-color: #222;
-  color: #999;
+  background-color: #111;
+  color: #aaa;
 }
 
 footer .inner {
   width: 60%;
   margin: 0 auto;
   padding: 50px 20px;
+  font-size: 13px;
 }
 
 footer .inner ul.footer1 {
   display: flex;
-  justify-content: space-around;
+  justify-content: start;
 }
+
 
 footer .inner ul.footer1 li ul {
   display: flex;
-  line-height: 2;
+  line-height: 3;
 }
 
+footer .inner ul.footer1 li ul li {
+  margin-right: 30px;
+}
 
+footer .inner ul.footer1 li ul li span {
+  color: white;
+}
 
+footer .inner ul.footer1 img {
+  padding-right: 70px;
+  padding-top: 20px;
+}
+
+footer .inner ul li p {
+  font-size: 12px;
+  padding-top: 10px;
+}
+
+footer hr {
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
 
 footer .inner ul.footer2 {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
+  justify-content: first baseline;
 }
 
 footer .inner ul.footer2 li {
@@ -268,12 +309,13 @@ footer .inner ul.footer2 li {
   height: 50%;
   font-size: 11px;
   line-height: 1.5;
-  justify-content: flex-start;
+  align-items: flex-start;
   padding: 5px;
 }
 
 footer .inner ul.footer2 li img {
   object-fit: contain;
   width: 15%;
+  margin-top: 10px;
   margin-right: 5px;
 }
